--- a/eddf.tex
+++ b/eddf.tex
@@ -51,7 +51,7 @@ RFL                 &                                    & \multicolumn{1}{r|}{e
                     & Night departures                   & 2N                         & 7N                         & 9N                         &                                                  \\ \cline{2-5}
                     \Cline{1.5pt}{1-5}
 \multirow{2}{*}{\textbf{07}} & M/L if able                        & \textbf{1E}                & \textbf{5E}                & \textbf{9D}                &                                                  \\ \cline{2-5}
-                    & H/S or unable                      & \textbf{1D}                & \textbf{9D}                & \textbf{9D}                &                                                  \\
+                    & H/J or unable                      & \textbf{1D}                & \textbf{9D}                & \textbf{9D}                &                                                  \\
                     \Cline{1.5pt}{1-6}
 \multirow{4}{*}{\textbf{18}} & \multirow{2}{*}{Only if 25 in use} & 2S                         & 6S                         & 8S                         & \multirow{4}{*}{\rotatebox{90}{\textbf{4000 ft}}}               \\ \cline{3-5}
                     &                                    &1L                         &                            &                            &                                                  \\ \cline{2-5}
