--- a/eddf.tex
+++ b/eddf.tex
@@ -46,17 +46,15 @@ SID                 &                                    & \multicolumn{1}{l|}{O
 RFL                 &                                    & \multicolumn{1}{r|}{even}  & \multicolumn{1}{r|}{even}  & \multicolumn{1}{r|}{odd}   &                                                  \\ \cline{1-5}
 \multirow{8}{*}{\textbf{25}} & M/L+3/4H+J if able                 & \textbf{1M} \textcolor{blue}{C}                & \textbf{6M} \textcolor{blue}{C}                & \textbf{6M} \textcolor{blue}{C}                & \multirow{2}{*}{\rotatebox{90}{\textbf{FL70}}} \\ \cline{2-5}
 & M/L+3/4H+J if able                 & \textbf{1H} \textcolor{blue}{L}                & \textbf{4H} \textcolor{blue}{L}                & \textbf{4H} \textcolor{blue}{L}               &                                                  \\ \Cline{1.5pt}{2-6}
-                    & 2H if able                         & \textbf{1G}                & \textbf{5F}                & \textbf{6F}                & \multirow{5}{*}{\rotatebox{90}{\textbf{5000 ft}}}                                                 \\ \cline{2-5}
+                    & 2H if able                         & \textbf{1G}                & \textbf{5F}                & \textbf{6F}                & \multirow{5}{*}{\rotatebox{90}{\textbf{5000}}}                                                 \\ \cline{2-5}
                     & If unable                          & \textbf{1G}                & \textbf{7G}                & \textbf{8G}                &                                                  \\ \cline{2-5}
                     & Night departures                   & 2N                         & 7N                         & 9N                         &                                                  \\ \cline{2-5}
                     \Cline{1.5pt}{1-5}
 \multirow{2}{*}{\textbf{07}} & M/L if able                        & \textbf{1E}                & \textbf{5E}                & \textbf{9D}                &                                                  \\ \cline{2-5}
                     & H/J or unable                      & \textbf{1D}                & \textbf{9D}                & \textbf{9D}                &                                                  \\
                     \Cline{1.5pt}{1-6}
-\multirow{4}{*}{\textbf{18}} & \multirow{2}{*}{Only if 25 in use} & 2S                         & 6S                         & 8S                         & \multirow{4}{*}{\rotatebox{90}{\textbf{4000 ft}}}               \\ \cline{3-5}
-                    &                                    &1L                         &                            &                            &                                                  \\ \cline{2-5}
-                    & Night departures                   & 1R                         & 3R                         & 3R                         &                                                  \\ \cline{2-5}
-                    & ATC contingency                    & 1T                         & 4T                         & 6T                         &                                                  \\ \cline{1-5}
+\multirow{2}{*}{\textbf{18}} & \multirow{2}{*}{Only if 25 in use} & 2S                         & 6S                         & 8S                         & \multirow{2}{*}{\rotatebox{90}{\textbf{4000 }}}               \\ \cline{3-5}
+                    &                                    &1L                         &                            &                            &                                                  \\ \cline{1-5}
 \multicolumn{6}{l}{\textcolor{blue}{C} - RWY 25C / \textcolor{blue}{L} - RWY 25L}\\
 \end{tabular}
 \end{table}
@@ -71,11 +69,11 @@ RFL                 &                                    & \multicolumn{1}{r|}{e
 \begin{tabular}{|c|l|c|c|c|c|c|c|l}
 \multicolumn{8}{c}{\textbf{Standard South 18}}                                                                                                                                                                                                                  &                                  \\ \cline{1-8}
 SID                          &                  & SOBRA                                       & ULKIG                                       & ANEKI                    & CINDY                    & KOMIB                              & SULUS                    &                                  \\
-RFL                          &                  & \multicolumn{1}{r|}{even} & \multicolumn{1}{r|}{even} & \multicolumn{1}{r|}{odd} & \multicolumn{1}{r|}{odd} & \multicolumn{1}{r|}{odd \scriptsize EDDN area} & \multicolumn{1}{r|}{odd} & \multirow{4}{*}{\rotatebox{90}{\textbf{5000 ft}}} \\ \cline{1-8}
+RFL                          &                  & \multicolumn{1}{r|}{even} & \multicolumn{1}{r|}{even} & \multicolumn{1}{r|}{odd} & \multicolumn{1}{r|}{odd} & \multicolumn{1}{r|}{odd \scriptsize EDDN area} & \multicolumn{1}{r|}{odd} & \multirow{4}{*}{\rotatebox{90}{\textbf{5000}}} \\ \cline{1-8}
 \multirow{3}{*}{\textbf{25}} & Prop 1/2         & 5P                                          &                                             &                          &                          &                                    &                          &                                  \\ \cline{2-8}
                              &                  & 6F                                          &                                             & 9F                       & 1F                       &                                    & 1F                       &                                  \\ \cline{2-8}
                              & Night departures & 6N                                          &                                             &                          &                          &                                    &                          &                                  \\  \Cline{1.5pt}{1-9}
-\multirow{2}{*}{\textbf{07}} & M/L if able      & 6E                                          &                                             & 4E                       & 1D                       & \textbf{3D}                                 & \textbf{1D}              & \multirow{5}{*}{\rotatebox{90}{\textbf{4000 ft}}} \\ \cline{2-8}
+\multirow{2}{*}{\textbf{07}} & M/L if able      & 6E                                          &                                             & 4E                       & 1D                       & \textbf{3D}                                 & \textbf{1D}              & \multirow{5}{*}{\rotatebox{90}{\textbf{4000}}} \\ \cline{2-8}
                              & H/J or unable    & 6D                                          &                                             & 2D                       & 1D                       & \textbf{3D}                                 & \textbf{1D}              &                                  \\ \Cline{1.5pt}{1-8}
 \multirow{3}{*}{\textbf{18}} & If able          & \textbf{1L}                                 & \textbf{1L}                                 & \textbf{9L}              & \textbf{1S}              & \textbf{}                          & \textbf{9S \textcolor{purple}{*}}             &                                  \\ \cline{2-8}
                              & If unable        &                                             & 2S                                          &                          & 1L                       &                                    & 9L                       &                                  \\ \cline{2-8}
@@ -92,7 +90,7 @@ RFL                          &                  & \multicolumn{1}{r|}{even} & \m
 
 \multicolumn{4}{c}{\textbf{Communication}}                                      \\ \hline
 \multirow{2}{*}{}    & \textbf{ADF} & \textbf{118.025} & \textbf{ATIS}            \\ %\cline{2-4}
-                     & \textbf{FC}  & \textbf{121.905} & \textbf{Delivery}        \\ \hline
+                     & \textbf{FC}  & \textbf{121.900} & \textbf{Delivery}        \\ \hline
 \multirow{6}{*}{\rotatebox{90}{GND}} & \textbf{FAC} & \textbf{121.850} & \textbf{Center Apron}    \\ %\cline{2-4}
                      & FAE          & 121.950          & East Apron               \\ %\cline{2-4}
                      & FAW          & 121.750          & West Apron               \\ %\cline{2-4}
