--- a/eddf.tex
+++ b/eddf.tex
@@ -70,21 +70,19 @@ RFL                 &                                    & \multicolumn{1}{r|}{e
 \multicolumn{8}{c}{\textbf{Standard South 18}}                                                                                                                                                                                                                  &                                  \\ \cline{1-8}
 SID                          &                  & SOBRA                                       & ULKIG                                       & ANEKI                    & CINDY                    & KOMIB                              & SULUS                    &                                  \\
 RFL                          &                  & \multicolumn{1}{r|}{even} & \multicolumn{1}{r|}{even} & \multicolumn{1}{r|}{odd} & \multicolumn{1}{r|}{odd} & \multicolumn{1}{r|}{odd \scriptsize EDDN area} & \multicolumn{1}{r|}{odd} & \multirow{4}{*}{\rotatebox{90}{\textbf{5000}}} \\ \cline{1-8}
-\multirow{3}{*}{\textbf{25}} & Prop 1/2         & 5P                                          &                                             &                          &                          &                                    &                          &                                  \\ \cline{2-8}
-                             &                  & 6F                                          &                                             & 9F                       & 1F                       &                                    & 1F                       &                                  \\ \cline{2-8}
-                             & Night departures & 6N                                          &                                             &                          &                          &                                    &                          &                                  \\  \Cline{1.5pt}{1-9}
-\multirow{2}{*}{\textbf{07}} & M/L if able      & 6E                                          &                                             & 4E                       & 1D                       & \textbf{3D}                                 & \textbf{1D}              & \multirow{5}{*}{\rotatebox{90}{\textbf{4000}}} \\ \cline{2-8}
+\multirow{2}{*}{\textbf{25}} & Prop 1/2         & 5P                                          &                                             &                          &                          &                                    &                          &                                  \\ \cline{2-8}
+                             &                  & 6F                                          &                                             & 9F                       & 1F                       &                                    & 1F                       &                                  \\ \Cline{1.5pt}{1-9}
+\multirow{2}{*}{\textbf{07}} & M/L if able      & 6E                                          &                                             & 4E                       & 1D                       & \textbf{3D}                                 & \textbf{1D}              & \multirow{4}{*}{\rotatebox{90}{\textbf{4000}}} \\ \cline{2-8}
                              & H/J or unable    & 6D                                          &                                             & 2D                       & 1D                       & \textbf{3D}                                 & \textbf{1D}              &                                  \\ \Cline{1.5pt}{1-8}
-\multirow{3}{*}{\textbf{18}} & If able          & \textbf{1L}                                 & \textbf{1L}                                 & \textbf{9L}              & \textbf{1S}              & \textbf{}                          & \textbf{9S \textcolor{purple}{*}}             &                                  \\ \cline{2-8}
-                             & If unable        &                                             & 2S                                          &                          & 1L                       &                                    & 9L                       &                                  \\ \cline{2-8}
-                             & L-Alternate RNAV &                                             &                                             & 2A                       & 1A                       &                                    & 2A                       &                                  \\ \cline{1-8}
+\multirow{2}{*}{\textbf{18}} & If able          & \textbf{1L}                                 & \textbf{1L}                                 & \textbf{9L}              & \textbf{1S}              & \textbf{}                          & \textbf{9S \textcolor{purple}{*}}             &                                  \\ \cline{2-8}
+                             & If unable        &                                             & 2S                                          &                          & 1L                       &                                    & 9L                       &                                  \\ \cline{1-8}
 \multicolumn{8}{l}{\textcolor{purple}{*} If RWY 07 in use, DO NOT use RWY 18 for SULUS departures} \\
 \end{tabular}
 \end{table}
 
 \end{textblock}
 
-\begin{textblock}{10}(178,70)
+\begin{textblock}{10}(178,60)
 \begin{table}[]
 \begin{tabular}{|l|l|l|l|}
 
@@ -117,7 +115,7 @@ RFL                          &                  & \multicolumn{1}{r|}{even} & \m
 \end{table}
 \end{textblock}
 
-\begin{textblock}{100}(0,70)
+\begin{textblock}{100}(0,60)
 \begin{table}[]
 \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
 \multicolumn{9}{c}{\textbf{Precision Approach}}                                                                                                                                                                            \\ \hline
@@ -132,7 +130,7 @@ FAF  & LEDKI                             & REDGO                             & E
 
 
 
-\begin{textblock}{100}(100,125)
+\begin{textblock}{100}(100,115)
 \begin{table}[]
 \begin{tabular}{|l|l|l|}
 \multicolumn{3}{c}{\textbf{Non-RNAV}} \\ \hline
@@ -151,7 +149,7 @@ FAF  & LEDKI                             & REDGO                             & E
   \today
 \end{textblock}
 
-\begin{textblock}{100}(0, 125)
+\begin{textblock}{100}(0, 115)
 \begin{table}[]
 \begin{tabular}{|l|l|l|l|l|}
 \multicolumn{5}{c}{\textbf{Handoff levels}}              \\ \hline
@@ -162,7 +160,7 @@ FAF  & LEDKI                             & REDGO                             & E
 \end{table}
 \end{textblock}
 
-\begin{textblock}{100}(0,100)
+\begin{textblock}{100}(0,90)
 \begin{table}[]
 \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
 
