--- a/edds.tex
+++ b/edds.tex
@@ -109,7 +109,7 @@
 \multicolumn{6}{c}{\textbf{Holdings}}                                                                                                                                        \\ \hline
 \multicolumn{1}{|l|}{BADSO} & \multicolumn{1}{l|}{LBU}   & \multicolumn{1}{l|}{TEKSI} & \multicolumn{1}{l|}{REUTL} & \multicolumn{1}{l|}{IBIRU} & \multicolumn{1}{l|}{STG}   \\ \hline
 \multicolumn{1}{|l|}{7000}  & \multicolumn{1}{l|}{5000}  & \multicolumn{1}{l|}{6000}  & \multicolumn{1}{l|}{6000}  & \multicolumn{1}{l|}{5000}  & \multicolumn{1}{l|}{5000}  \\
-\multicolumn{1}{|l|}{174 L} & \multicolumn{1}{l|}{177 L} & \multicolumn{1}{l|}{268 R} & \multicolumn{1}{l|}{346 L} & \multicolumn{1}{l|}{346 L} & \multicolumn{1}{l|}{346 L} \\ \hline
+\multicolumn{1}{|l|}{174$^\circ$ L} & \multicolumn{1}{l|}{177$^\circ$ L} & \multicolumn{1}{l|}{268$^\circ$ R} & \multicolumn{1}{l|}{346$^\circ$ L} & \multicolumn{1}{l|}{346$^\circ$ L} & \multicolumn{1}{l|}{166$^\circ$ L} \\ \hline
 \end{tabular}
 \end{table}
 \end{textblock}
