--- a/eddf.tex
+++ b/eddf.tex
@@ -35,27 +35,23 @@
 \textblockorigin{7mm}{12mm}
 
 
-\begin{textblock}{30}(0,0)
+\begin{textblock}{30}(0,4.5)
 
 \begin{table}[]
 \begin{tabular}{|c|l|c|c|c|l}
 \multicolumn{5}{c}{\textbf{Standard North 07/25}}  \\ \cline{1-5}
 SID                 &                                    & \multicolumn{1}{l|}{OBOKA} & \multicolumn{1}{l|}{MARUN} & \multicolumn{1}{l|}{TOBAK} & \multirow{2}{*}{} \\
-
-
 RFL                 &                                    & \multicolumn{1}{r|}{even}  & \multicolumn{1}{r|}{even}  & \multicolumn{1}{r|}{odd}   &                                                  \\ \cline{1-5}
-\multirow{8}{*}{\textbf{25}} & M/L+3/4H+J if able                 & \textbf{1M} \textcolor{blue}{C}                & \textbf{6M} \textcolor{blue}{C}                & \textbf{6M} \textcolor{blue}{C}                & \multirow{2}{*}{\rotatebox{90}{\textbf{FL70}}} \\ \cline{2-5}
-& M/L+3/4H+J if able                 & \textbf{1H} \textcolor{blue}{L}                & \textbf{4H} \textcolor{blue}{L}                & \textbf{4H} \textcolor{blue}{L}               &                                                  \\ \Cline{1.5pt}{2-6}
-                    & 2H if able                         & \textbf{1G}                & \textbf{5F}                & \textbf{6F}                & \multirow{5}{*}{\rotatebox{90}{\textbf{5000}}}                                                 \\ \cline{2-5}
-                    & If unable                          & \textbf{1G}                & \textbf{7G}                & \textbf{8G}                &                                                  \\ \cline{2-5}
-                    & Night departures                   & 2N                         & 7N                         & 9N                         &                                                  \\ \cline{2-5}
-                    \Cline{1.5pt}{1-5}
+\textbf{25C} & M/L+3/4H+J if able                 & \textbf{1M} (2W)               & \textbf{6M} (2W)                & \textbf{6M} (2W)               & \multirow{2}{*}{\rotatebox{90}{\textbf{FL70}}} \\ \cline{1-5}
+\textbf{25L} & M/L+3/4H+J if able                 & \textbf{1H} (2K)               & \textbf{4H} (2K)                & \textbf{4H} (2K)              &                                                  \\ \Cline{1.5pt}{1-6}
+\multirow{2}{*}{\textbf{25}}         & 2H if able                         & \textbf{1G}                & \textbf{5F}                & \textbf{6F}                & \multirow{4}{*}{\rotatebox{90}{\textbf{5000}}}                                                 \\ \cline{2-5}
+                    & If unable                          & \textbf{1G}                & \textbf{7G}                & \textbf{8G}                &                                                  \\ \Cline{1.5pt}{1-5}
 \multirow{2}{*}{\textbf{07}} & M/L if able                        & \textbf{1E}                & \textbf{5E}                & \textbf{9D}                &                                                  \\ \cline{2-5}
                     & H/J or unable                      & \textbf{1D}                & \textbf{9D}                & \textbf{9D}                &                                                  \\
                     \Cline{1.5pt}{1-6}
 \multirow{2}{*}{\textbf{18}} & \multirow{2}{*}{Only if 25 in use} & 2S                         & 6S                         & 8S                         & \multirow{2}{*}{\rotatebox{90}{\textbf{4000 }}}               \\ \cline{3-5}
                     &                                    &1L                         &                            &                            &                                                  \\ \cline{1-5}
-\multicolumn{6}{l}{\textcolor{blue}{C} - RWY 25C / \textcolor{blue}{L} - RWY 25L}\\
+\multicolumn{6}{l}{( ) - RNP equivalent}\\
 \end{tabular}
 \end{table}
 \end{textblock}
@@ -64,7 +60,7 @@ RFL                 &                                    & \multicolumn{1}{r|}{e
   \includegraphics[width=30\textwidth]{VATGer-Logo-Colour}
 \end{textblock}
 
-\begin{textblock}{2}(105,13.73)
+\begin{textblock}{2}(110,13.73)
 \begin{table}[]
 \begin{tabular}{|c|l|c|c|c|c|c|c|l}
 \multicolumn{8}{c}{\textbf{Standard South 18}}                                                                                                                                                                                                                  &                                  \\ \cline{1-8}
@@ -72,9 +68,9 @@ SID                          &                  & SOBRA                         
 RFL                          &                  & \multicolumn{1}{r|}{even} & \multicolumn{1}{r|}{even} & \multicolumn{1}{r|}{odd} & \multicolumn{1}{r|}{odd} & \multicolumn{1}{r|}{odd \scriptsize EDDN area} & \multicolumn{1}{r|}{odd} & \multirow{4}{*}{\rotatebox{90}{\textbf{5000}}} \\ \cline{1-8}
 \multirow{2}{*}{\textbf{25}} & Prop 1/2         & 5P                                          &                                             &                          &                          &                                    &                          &                                  \\ \cline{2-8}
                              &                  & 6F                                          &                                             & 9F                       & 1F                       &                                    & 1F                       &                                  \\ \Cline{1.5pt}{1-9}
-\multirow{2}{*}{\textbf{07}} & M/L if able      & 6E                                          &                                             & 4E                       & 1D                       & \textbf{3D}                                 & \textbf{1D}              & \multirow{4}{*}{\rotatebox{90}{\textbf{4000}}} \\ \cline{2-8}
-                             & H/J or unable    & 6D                                          &                                             & 2D                       & 1D                       & \textbf{3D}                                 & \textbf{1D}              &                                  \\ \Cline{1.5pt}{1-8}
-\multirow{2}{*}{\textbf{18}} & If able          & \textbf{1L}                                 & \textbf{1L}                                 & \textbf{9L}              & \textbf{1S}              & \textbf{}                          & \textbf{9S \textcolor{purple}{*}}             &                                  \\ \cline{2-8}
+\multirow{2}{*}{\textbf{07}} & M/L if able      & 6E                                          &                                             & 4E                       & 1D                       & \textbf{3D}                        & \textbf{1D}              & \multirow{4}{*}{\rotatebox{90}{\textbf{4000}}} \\ \cline{2-8}
+                             & H/J or unable    & 6D                                          &                                             & 2D                       & 1D                       & \textbf{3D}                        & \textbf{1D}              &                                  \\ \Cline{1.5pt}{1-8}
+\multirow{2}{*}{\textbf{18}} & If able          & \textbf{1L} (1U)                            & \textbf{1L}                                 & \textbf{9L} (2A)         & \textbf{1S}              & \textbf{}                          & \textbf{9S \textcolor{purple}{*}}             &                                  \\ \cline{2-8}
                              & If unable        &                                             & 2S                                          &                          & 1L                       &                                    & 9L                       &                                  \\ \cline{1-8}
 \multicolumn{8}{l}{\textcolor{purple}{*} If RWY 07 in use, DO NOT use RWY 18 for SULUS departures} \\
 \end{tabular}
@@ -82,7 +78,7 @@ RFL                          &                  & \multicolumn{1}{r|}{even} & \m
 
 \end{textblock}
 
-\begin{textblock}{10}(178,60)
+\begin{textblock}{10}(175,60)
 \begin{table}[]
 \begin{tabular}{|l|l|l|l|}
 
@@ -172,32 +168,5 @@ FL110  & FL110  & 6000   & 6000   & 5000   & 5000   & 5000   & 5000   & 5000   \
 \end{tabular}
 \end{table}
 \end{textblock}
-
-% \begin{textblock}{100}(0,130)
-% \footnotesize
-% \begin{table}[]
-% \begin{tabular}{|l|l|l|ll|l|}
-%
-% \multicolumn{6}{c}{\textbf{Parking}}                                                                                           \\ \hline
-% \multicolumn{1}{|c|}{A} & \multicolumn{1}{c|}{B} & \multicolumn{1}{c|}{C} & \multicolumn{2}{c|}{D/E}    & \multicolumn{1}{c|}{F} \\ \hline
-% ADH                     & ACA                    & AAL                    & AFR                   & BAG & BOX: F211-F224         \\ \
-% ADR                     & ANA                    & AFL                    & BAW                   & COA & GEC: F211-F227         \\
-% AEE                     & ANZ                    & AZA                    & BER                   & FIN & SWL: F231-F235         \\
-% AUA                     & DLH                    & ELL                    & BMI                   & GAE & TAY: F231-F235         \\
-% CFG                     & OAL                    & ELY                    & CSA                   & TUI & FDX: F231-F235         \\
-% CTN                     & ATR                    & JAT                    & DAL                   & ICE &                        \\
-% DLH                     & LAN                    & LHA                    & EIN                   & JAL &                        \\
-% JKK                     & SAA                    & THY                    & HVN                   & NWA &                        \\
-% LGL                     & SIA                    & WTA                    & IBE                   & UAE &                        \\
-% LOT                     & THA                    &                        & KAL                   & UZB &                        \\
-% SAS                     & USA                    & DLH only:              & KLM                   &     &                        \\
-% TAY                     & VRG                    & C13-C16                &                       &     &                        \\
-% UAL                     &                        &                        & \multicolumn{1}{l}{} &     &                        \\ \hline
-% \end{tabular}
-% \end{table}
-% \end{textblock}
-
-
-
 
 \end{document}
