--- a/eddf.tex
+++ b/eddf.tex
@@ -35,11 +35,11 @@
 \textblockorigin{7mm}{12mm}
 
 
-\begin{textblock}{30}(0,4.5)
+\begin{textblock}{30}(0,13)
 
 \begin{table}[]
 \begin{tabular}{|c|l|c|c|c|l}
-\multicolumn{5}{c}{\textbf{Standard North 07/25}}  \\ \cline{1-5}
+\multicolumn{5}{c}{\textbf{North Standard 07/25}}  \\ \cline{1-5}
 SID                 &                                    & \multicolumn{1}{l|}{OBOKA} & \multicolumn{1}{l|}{MARUN} & \multicolumn{1}{l|}{TOBAK} & \multirow{2}{*}{} \\
 RFL                 &                                    & \multicolumn{1}{r|}{even}  & \multicolumn{1}{r|}{even}  & \multicolumn{1}{r|}{odd}   &                                                  \\ \cline{1-5}
 \textbf{25C} & M/L+3/4H+J if able                 & \textbf{1M} (2W)               & \textbf{6M} (2W)                & \textbf{6M} (2W)               & \multirow{2}{*}{\rotatebox{90}{\textbf{FL70}}} \\ \cline{1-5}
@@ -48,9 +48,7 @@ RFL                 &                                    & \multicolumn{1}{r|}{e
                     & If unable                          & \textbf{1G}                & \textbf{7G}                & \textbf{8G}                &                                                  \\ \Cline{1.5pt}{1-5}
 \multirow{2}{*}{\textbf{07}} & M/L if able                        & \textbf{1E}                & \textbf{5E}                & \textbf{9D}                &                                                  \\ \cline{2-5}
                     & H/J or unable                      & \textbf{1D}                & \textbf{9D}                & \textbf{9D}                &                                                  \\
-                    \Cline{1.5pt}{1-6}
-\multirow{2}{*}{\textbf{18}} & \multirow{2}{*}{Only if 25 in use} & 2S                         & 6S                         & 8S                         & \multirow{2}{*}{\rotatebox{90}{\textbf{4000 }}}               \\ \cline{3-5}
-                    &                                    &1L                         &                            &                            &                                                  \\ \cline{1-5}
+                    \cline{1-5}
 \multicolumn{6}{l}{( ) - RNP equivalent}\\
 \end{tabular}
 \end{table}
@@ -60,10 +58,10 @@ RFL                 &                                    & \multicolumn{1}{r|}{e
   \includegraphics[width=30\textwidth]{VATGer-Logo-Colour}
 \end{textblock}
 
-\begin{textblock}{2}(110,13.73)
+\begin{textblock}{2}(110,13)
 \begin{table}[]
 \begin{tabular}{|c|l|c|c|c|c|c|c|l}
-\multicolumn{8}{c}{\textbf{Standard South 18}}                                                                                                                                                                                                                  &                                  \\ \cline{1-8}
+\multicolumn{8}{c}{\textbf{South Standard 18}}                                                                                                                                                                                                                  &                                  \\ \cline{1-8}
 SID                          &                  & SOBRA                                       & ULKIG                                       & ANEKI                    & CINDY                    & KOMIB                              & SULUS                    &                                  \\
 RFL                          &                  & \multicolumn{1}{r|}{even} & \multicolumn{1}{r|}{even} & \multicolumn{1}{r|}{odd} & \multicolumn{1}{r|}{odd} & \multicolumn{1}{r|}{odd \scriptsize EDDN area} & \multicolumn{1}{r|}{odd} & \multirow{4}{*}{\rotatebox{90}{\textbf{5000}}} \\ \cline{1-8}
 \multirow{2}{*}{\textbf{25}} & Prop 1/2         & 5P                                          &                                             &                          &                          &                                    &                          &                                  \\ \cline{2-8}
@@ -104,9 +102,10 @@ RFL                          &                  & \multicolumn{1}{r|}{even} & \m
                      & \textbf{GE}  & \textbf{127.725} & \textbf{HEF Hersfeld}    \\ %\cline{2-4}
                      & GR           & 124.475          & RUD Rüdesheim            \\ %\cline{2-4}
                      & GZ           & 120.575          & KTG Kitzingen            \\ %\cline{2-4}
+                     & \textbf{UW}  & \textbf{133.650} & \textbf{Rhein West}      \\
                      & UT           & 132.400          & Rhein TGO                \\ %\cline{2-4}
                      & UN           & 132.775          & Rhein NTM                \\ %\cline{2-4}
-                     & \textbf{UW}  & \textbf{133.650} & \textbf{Rhein West}      \\ \hline
+                     & UF           & 136.325          & Rhein Fulda              \\ \hline
 \end{tabular}
 \end{table}
 \end{textblock}
