--- a/eddf.tex
+++ b/eddf.tex
@@ -12,8 +12,8 @@
 \usepackage[table]{xcolor}
 \usepackage{booktabs}
 \usepackage{colortbl}
-\usepackage[ngerman]{babel}
-\usepackage[de-DE]{datetime2}
+\usepackage{babel}
+\usepackage[en-US]{datetime2}
 
 
 \newlength{\Oldarrayrulewidth}
@@ -69,7 +69,7 @@ RFL                          &                  & \multicolumn{1}{r|}{even} & \m
 \multirow{2}{*}{\textbf{07}} & M/L if able      & 6E                                          &                                             & 4E                       & 1D                       & \textbf{3D}                        & \textbf{1D}              & \multirow{4}{*}{\rotatebox{90}{\textbf{4000}}} \\ \cline{2-8}
                              & H/J or unable    & 6D                                          &                                             & 2D                       & 1D                       & \textbf{3D}                        & \textbf{1D}              &                                  \\ \Cline{1.5pt}{1-8}
 \multirow{2}{*}{\textbf{18}} & If able          & \textbf{1L} (1U)                            & \textbf{1L}                                 & \textbf{9L} (2A)         & \textbf{1S}              & \textbf{}                          & \textbf{9S \textcolor{purple}{*}}             &                                  \\ \cline{2-8}
-                             & If unable        &                                             & 2S                                          &                          & 1L                       &                                    & 9L                       &                                  \\ \cline{1-8}
+                             & If unable        & ULKIG1L                                     & 1L                                          &                          & 1L                       &                                    & 9L                       &                                  \\ \cline{1-8}
 \multicolumn{8}{l}{\textcolor{purple}{*} If RWY 07 in use, DO NOT use RWY 18 for SULUS departures} \\
 \end{tabular}
 \end{table}
@@ -117,7 +117,7 @@ RFL                          &                  & \multicolumn{1}{r|}{even} & \m
 RWY  & \multicolumn{1}{c|}{\textbf{25L}} & \multicolumn{1}{c|}{\textbf{25C}} & \multicolumn{2}{c|}{\textbf{25R}} & \multicolumn{2}{c|}{\textbf{07L}} & \multicolumn{1}{c|}{\textbf{07C}} & \multicolumn{1}{c|}{\textbf{07R}} \\ \hline
 APP  & ILS                               & ILS                               & ILS Y           & ILS Z           & ILS Y           & ILS Z           & ILS                               & ILS Z                             \\
 FREQ & 111.15                            & 111.55                            & 109.75          & 111.35          & 110.30          & 111.75          & 110.55                            & 110.95                            \\
-CRS  & 248$^\circ$                              & 248$^\circ$                              & 248$^\circ$/3.2$^\circ$       & 248$^\circ$/3.0$^\circ$       & 068$^\circ$/3.2$^\circ$       & 068$^\circ$/3.0$^\circ$       & 069$^\circ$                              & 069$^\circ$                              \\
+CRS  & 248$^\circ$                              & 248$^\circ$                              & 248$^\circ$/3.2$^\circ$       & 248$^\circ$/3.0$^\circ$       & 067$^\circ$/3.2$^\circ$       & 067$^\circ$/3.0$^\circ$       & 067$^\circ$                              & 067$^\circ$                              \\
 FAF  & LEDKI                             & REDGO                             & EDEPU           & NIBAP           & VAGUL           & NODGO           & LOMPO                             & ROBSA                             \\ \hline
 \end{tabular}
 \end{table}
