--- a/edds.tex
+++ b/edds.tex
@@ -12,8 +12,8 @@
 \usepackage[table]{xcolor}
 \usepackage{booktabs}
 \usepackage{colortbl}
-\usepackage[ngerman]{babel}
-\usepackage[de-DE]{datetime2}
+\usepackage{babel}
+\usepackage[en-US]{datetime2}
 
 
 
