--- a/eddf.tex
+++ b/eddf.tex
@@ -69,7 +69,7 @@ RFL                          &                  & \multicolumn{1}{r|}{even} & \m
 \multirow{2}{*}{\textbf{07}} & M/L if able      & 6E                                          &                                             & 4E                       & 1D                       & \textbf{3D}                        & \textbf{1D}              & \multirow{4}{*}{\rotatebox{90}{\textbf{4000}}} \\ \cline{2-8}
                              & H/J or unable    & 6D                                          &                                             & 2D                       & 1D                       & \textbf{3D}                        & \textbf{1D}              &                                  \\ \Cline{1.5pt}{1-8}
 \multirow{2}{*}{\textbf{18}} & If able          & \textbf{1L} (1U)                            & \textbf{1L}                                 & \textbf{9L} (2A)         & \textbf{1S}              & \textbf{}                          & \textbf{9S \textcolor{purple}{*}}             &                                  \\ \cline{2-8}
-                             & If unable        & ULKIG1L                                     & 1L                                          &                          & 1L                       &                                    & 9L                       &                                  \\ \cline{1-8}
+                             & If unable        & ULKIG1L                                     &                                             &                          & 1L                       &                                    & 9L                       &                                  \\ \cline{1-8}
 \multicolumn{8}{l}{\textcolor{purple}{*} If RWY 07 in use, DO NOT use RWY 18 for SULUS departures} \\
 \end{tabular}
 \end{table}
