--- a/edds.tex
+++ b/edds.tex
@@ -83,7 +83,7 @@
 
 \begin{textblock}{100}(210,15)
 \begin{table}[]
-\begin{tabular}{llcl}
+\begin{tabular}{llll}
 \multicolumn{4}{c}{\textbf{Communication}}                                                                                                                          \\ \hline
 \multicolumn{1}{|l|}{\multirow{3}{*}{\rotatebox{90}{GND}}} & \multicolumn{1}{l|}{XS}          & \multicolumn{1}{c|}{126.125}          & \multicolumn{1}{l|}{ATIS}                   \\
 \multicolumn{1}{|l|}{}                     & \multicolumn{1}{l|}{SC}          & \multicolumn{1}{c|}{121.9}            & \multicolumn{1}{l|}{Delivery}               \\
